--- a/css/todovaporstore.css
+++ b/css/todovaporstore.css
@@ -4,220 +4,253 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  text-transform: capitalize;
   text-decoration: none;
-  font-family: Arial, Helvetica, sans-serif;
-  transition: all 0.4s cubic-bezier(0, 1.57, 0.67, 1.18);
-  /*  Responsive CSS */
-  /* Selector de Clases */
-  /* Acá empieza la flex box */
-  /* Acá termina la flex box */
-  /* Acá empieza la grid */
-  /* Acá termina la grid */
-  /* Selector de ID */
-  /* Tablas */
-  /* Carrousel */ }
-  @media only screen and (max-width: 1024px) {
-    * .footer-col {
-      width: 50% !important;
-      margin-bottom: 30px !important; }
-    * .pagename {
-      padding: 0 !important;
-      margin: 0 !important;
-      font-size: 35px !important;
-      letter-spacing: 10px !important;
-      height: 150px !important; }
-    * .warning {
-      line-height: 25px !important;
-      font-size: 14px !important;
-      padding: 12px !important; } }
-  @media only screen and (max-width: 767px) {
-    * .footer-col {
-      width: 100% !important; }
-    * .pagename {
-      padding: 0 !important;
-      letter-spacing: 0px !important;
-      font-size: 25px !important;
-      height: 100px !important; }
-    * .warning {
-      line-height: 25px !important;
-      font-size: 12px !important;
-      padding: 10px !important; } }
-  * .backg {
-    background-image: linear-gradient(gray, white); }
-  * .cuerpo {
-    background-image: linear-gradient(gray, white); }
-  * .pic {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%; }
-  * .pagename {
-    font-size: 65px;
-    font-weight: 900;
-    letter-spacing: 20px;
-    text-align: center;
-    color: white;
-    text-shadow: yellow 0 0 5px, red 0 0 5px;
-    text-transform: uppercase;
-    background-image: url(../imagenes/back1.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    padding: 200px;
-    margin: 0; }
-  * .titulos {
-    font-size: 40px;
-    font-weight: bold;
-    letter-spacing: 10px;
-    text-align: center;
-    text-shadow: black 6px 6px 8px;
-    text-transform: uppercase; }
-  * .titulos2 {
-    background-repeat: no-repeat;
-    background-position: center;
-    color: #ffffff;
-    font-size: 40px;
-    font-weight: bold;
-    letter-spacing: 10px;
-    text-align: center;
-    text-shadow: black 6px 6px 8px;
-    text-transform: uppercase; }
-  * h3 {
-    color: #333333;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 16px;
-    font-weight: 800;
-    font-style: normal;
-    line-height: 32px;
-    padding-bottom: 15px; }
-  * h2 {
-    color: #000000;
-    font-family: 'Bitter', serif;
-    font-size: 25px;
-    font-style: normal;
-    font-weight: 1000;
-    line-height: 54px;
-    padding: 15px 0 15px 0; }
-  * .questions {
-    background-image: linear-gradient(gray, white);
-    display: flex;
-    justify-content: flex-start;
-    flex-wrap: wrap; }
-  * .questions_box {
-    background-color: lightpink;
-    border-radius: 10px;
-    margin: 10px 0px 10px 10px;
-    width: 50%; }
-  * .questions_box_title {
-    color: #125688; }
-  * .questions_box_content {
-    color: #333;
-    font-family: 'Verdana', sans-serif;
-    font-size: 16px;
-    letter-spacing: normal;
-    line-height: 150%;
-    text-indent: 30px;
-    margin: 0; }
-  * .form {
-    margin-left: 40px; }
-  * .tablas {
-    background-color: green; }
-  * .fondos {
-    background-image: url(/imagenes/back.jpg); }
-  * .imgprod {
-    margin: 0px 10px 0px 10px;
-    border-radius: 10px;
-    border: 5px solid #000000; }
-  * .menu {
-    display: fixed;
-    top: 200;
-    left: 0; }
-  * .flex {
-    display: flex;
-    background-image: linear-gradient(gray, white);
-    width: 100%;
+  transition: all 0.4s cubic-bezier(0, 1.57, 0.67, 1.18); }
+
+body {
+  line-height: 1.5;
+  font-family: 'Poppins', sans-serif;
+  background-image: linear-gradient(gray, white, gray); }
+
+/*  Responsividad CSS */
+@media only screen and (max-width: 1024px) {
+  .footer-col {
+    width: 50% !important;
+    margin-bottom: 30px !important; }
+  .pagename {
+    padding: 0 !important;
+    margin: 0 !important;
+    font-size: 35px !important;
+    letter-spacing: 10px !important;
+    height: 150px !important; }
+  .warning {
+    line-height: 25px !important;
+    font-size: 14px !important;
+    padding: 12px !important; } }
+
+@media only screen and (max-width: 768px) {
+  .footer-col {
+    width: 100% !important; }
+  .pagename {
+    padding: 0 !important;
+    letter-spacing: 0px !important;
+    font-size: 25px !important;
+    height: 100px !important; }
+  .warning {
+    line-height: 25px !important;
+    font-size: 12px !important;
+    padding: 10px !important; }
+  .questions {
+    flex-direction: column !important; }
+  .questions_box {
+    width: 100% !important; } }
+
+@media (max-width: 420px) {
+  .wrapper .form .inputfield {
     flex-direction: column;
-    align-items: center; }
-  * .flex__box {
-    padding: 10px 0px 100px 0px;
-    display: flex;
-    flex-direction: row; }
-  * .flex__box__component {
-    padding: 16px; }
-  * .flex__sub {
-    text-align: center;
-    font-size: 110%;
-    padding-top: 20px; }
-  * .grid-container {
-    display: grid;
-    grid-template-rows: 200px 150px 200px 150px 200px 150px;
-    grid-template-columns: 25% 25% 25% 25%;
-    grid-row-gap: 100px;
-    grid-column-gap: 10px;
-    width: 100%;
-    height: 100%;
-    background-color: darkgray; }
-  * .titulo {
-    grid-column: 1 / 5;
-    background-color: #8EBBDF;
-    border-radius: 10px; }
-  * .titulo2 {
-    grid-column: 1 / 5;
-    grid-row: 3 / 4;
-    background-color: #8EBBDF; }
-  * .titulo3 {
-    grid-column: 1 / 5;
-    grid-row: 5 / 6;
-    background-color: #8EBBDF; }
-  * .caja {
-    display: flex;
-    justify-content: center;
-    align-items: center; }
-  * .movi:hover {
-    border-radius: 10px;
-    transform: scale(2, 2) translate(-50px, 0); }
-  * .movi2:hover {
-    border-radius: 10px;
-    transform: scale(2, 2) translate(50px, 0); }
-  * .warning {
-    width: 100%;
-    height: 50%;
-    display: block;
-    background-color: #ffffff;
-    color: #000000;
-    border: solid #000000;
-    text-align: center;
-    font-size: 16px;
-    font-weight: 600;
-    line-height: 60px;
-    margin: 0; }
-  * #verde {
-    background-color: #8DB600; }
-  * #amarillo {
-    background-color: yellow; }
-  * #anaranjado {
-    background-color: orange; }
-  * #rojo {
-    background-color: orangered; }
-  * .carousel-control-prev-icon,
-  * .carousel-control-next-icon {
-    height: 100px;
-    width: 100px;
-    outline: black;
-    background-size: 100%, 100%;
-    border-radius: 50%;
-    border: 1px solid black;
-    background-image: none; }
-  * .carousel-control-next-icon:after {
-    content: '>';
-    font-size: 55px;
-    color: red; }
-  * .carousel-control-prev-icon:after {
-    content: '<';
-    font-size: 55px;
-    color: red; }
+    align-items: flex-start; }
+  .wrapper .form .inputfield label {
+    margin-bottom: 5px; }
+  .wrapper .form .inputfield.terms {
+    flex-direction: row; } }
+
+.pagename {
+  font-size: 65px;
+  font-weight: 900;
+  letter-spacing: 20px;
+  text-align: center;
+  color: white;
+  text-shadow: yellow 0 0 5px, red 0 0 5px;
+  text-transform: uppercase;
+  background-image: url(../imagenes/back1.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  padding: 200px;
+  margin: 0; }
+
+.pagesubname {
+  font-size: 44px;
+  font-weight: 900;
+  letter-spacing: 20px;
+  text-align: center;
+  color: white;
+  text-shadow: #dc3545 0 0 5px, #084298 0 0 5px;
+  text-transform: uppercase;
+  background-image: url(../imagenes/back.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  padding: 100px;
+  margin: 0; }
+
+h3 {
+  color: #333333;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  font-weight: 800;
+  font-style: normal;
+  line-height: 32px;
+  padding-bottom: 15px; }
+
+h2 {
+  color: #000000;
+  font-family: 'Bitter', serif;
+  font-size: 25px;
+  font-style: normal;
+  font-weight: 1000;
+  line-height: 54px;
+  padding: 15px 0 15px 0; }
+
+/* Preguntas */
+.questions {
+  width: 100%;
+  padding: 30px;
+  display: flex;
+  margin: 0;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center; }
+
+.questions_box {
+  background-color: #fff;
+  border-radius: 10px;
+  margin-bottom: 15px;
+  width: 80%;
+  padding: 7px 0 10px 20px; }
+
+.questions_box_title {
+  color: #000;
+  font-family: 'Open Sans', sans-serif; }
+
+.questions_box_content {
+  color: #333;
+  font-family: 'Verdana', sans-serif;
+  font-size: 16px;
+  line-height: 150%;
+  margin-right: 5px; }
+
+.imgprod {
+  margin: 0px 10px 0px 10px;
+  border-radius: 10px;
+  border: 5px solid #000000; }
+
+.menu {
+  display: fixed;
+  top: 200;
+  left: 0; }
+
+/* Acá empieza la flex box */
+.flex {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: center; }
+
+.flex__box {
+  padding: 10px 0px 100px 0px;
+  display: flex;
+  flex-direction: row; }
+
+.flex__box__component {
+  padding: 16px; }
+
+.flex__sub {
+  text-align: center;
+  font-size: 110%;
+  padding-top: 20px; }
+
+/* Acá termina la flex box */
+/* Acá empieza la grid */
+.grid-container {
+  display: grid;
+  grid-template-rows: 200px 150px 200px 150px 200px 150px;
+  grid-template-columns: 25% 25% 25% 25%;
+  grid-row-gap: 100px;
+  grid-column-gap: 10px;
+  width: 100%;
+  height: 100%;
+  background-color: darkgray; }
+
+.titulo {
+  grid-column: 1 / 5;
+  background-color: #8EBBDF;
+  border-radius: 10px; }
+
+.titulo2 {
+  grid-column: 1 / 5;
+  grid-row: 3 / 4;
+  background-color: #8EBBDF; }
+
+.titulo3 {
+  grid-column: 1 / 5;
+  grid-row: 5 / 6;
+  background-color: #8EBBDF; }
+
+.caja {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
+/* Acá termina la grid */
+.movi:hover {
+  border-radius: 10px;
+  transform: scale(2, 2) translate(-50px, 0); }
+
+.movi2:hover {
+  border-radius: 10px;
+  transform: scale(2, 2) translate(50px, 0); }
+
+.warning {
+  width: 100%;
+  height: 50%;
+  display: block;
+  background-color: #ffffff;
+  color: #000000;
+  border: solid #000000;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 60px;
+  margin: 0; }
+
+/* Selector de ID */
+/* Tablas */
+#verde {
+  background-color: #8DB600; }
+
+#amarillo {
+  background-color: yellow; }
+
+#anaranjado {
+  background-color: orange; }
+
+#rojo {
+  background-color: orangered; }
+
+/* Carrousel */
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  height: 100px;
+  width: 100px;
+  outline: black;
+  background-size: 100%, 100%;
+  border-radius: 50%;
+  border: 1px solid black;
+  background-image: none; }
+
+.carousel-control-next-icon:after {
+  content: '>';
+  font-size: 55px;
+  color: red; }
+
+.carousel-control-prev-icon:after {
+  content: '<';
+  font-size: 55px;
+  color: red; }
 
 /* Galeria de productos */
 .box-container {
@@ -303,6 +336,7 @@
 .box:hover .overlay a {
   transform: translateY(0px); }
 
+/* Footer */
 .footer {
   background-color: #24262b;
   padding-top: 20px; }
@@ -373,6 +407,109 @@ ul {
   color: #24262b;
   background-color: #ffffff; }
 
-body {
-  line-height: 1.5;
-  font-family: 'Poppins', sans-serif; }
+/* Formulario */
+.wrapper {
+  max-width: 500px;
+  width: 100%;
+  background: #fff;
+  margin: 20px;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.125);
+  padding: 30px; }
+
+.wrapper .title {
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 25px;
+  color: black;
+  text-transform: uppercase;
+  text-align: center; }
+
+.wrapper .form {
+  width: 100%; }
+
+.wrapper .form .inputfield {
+  margin-bottom: 15px;
+  display: flex;
+  align-items: center; }
+
+.wrapper .form .inputfield label {
+  width: 200px;
+  color: #757575;
+  margin-right: 10px;
+  font-size: 14px; }
+
+.wrapper .form .inputfield .input,
+.wrapper .form .inputfield .textarea {
+  width: 100%;
+  outline: none;
+  border: 1px solid #d5dbd9;
+  font-size: 15px;
+  padding: 8px 10px;
+  border-radius: 3px;
+  transition: all 0.3s ease; }
+
+.wrapper .form .inputfield .textarea {
+  width: 100%;
+  height: 125px;
+  resize: none; }
+
+.wrapper .form .inputfield .input:focus,
+.wrapper .form .inputfield .textarea:focus {
+  border: 1px solid #fec107; }
+
+.wrapper .form .inputfield p {
+  font-size: 14px;
+  color: #757575; }
+
+.wrapper .form .inputfield .btn {
+  width: 100%;
+  padding: 8px 10px;
+  font-size: 15px;
+  border: 0px;
+  background: black;
+  color: #fff;
+  cursor: pointer;
+  border-radius: 3px;
+  outline: none; }
+
+.wrapper .form .inputfield .btn:hover {
+  background: gray; }
+
+.wrapper .form .inputfield:last-child {
+  margin-bottom: 0; }
+
+.container-content {
+  width: 1200px;
+  margin: auto;
+  margin-top: 40px; }
+
+article {
+  width: 100%;
+  padding: 20px;
+  padding-bottom: 40px;
+  box-shadow: -10px 0 20px -30px black;
+  position: relative;
+  border-radius: 6px;
+  overflow: hidden; }
+
+article:before {
+  content: '';
+  width: 100%;
+  height: 6px;
+  position: absolute;
+  top: 0;
+  left: 0; }
+
+article h1 {
+  margin-top: 20px;
+  font-weight: 500;
+  font-size: 40px; }
+
+article p {
+  margin-top: 20px;
+  font-size: 18px;
+  color: #000; }
+
+article img {
+  width: 100%;
+  margin-top: 20px; }
