--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,13 +1,18 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 *{
-  margin:0; padding: 0;
+  margin:0; 
+  padding: 0;
   box-sizing: border-box;
-  text-transform: capitalize;
   text-decoration: none;
-  font-family: Arial, Helvetica, sans-serif;
   transition: all 0.4s cubic-bezier(0,1.57,.67,1.18);
-
-/*  Responsive CSS */
+}
+body {
+	line-height: 1.5;
+	font-family: 'Poppins', sans-serif;
+  background-image: linear-gradient(gray, white, gray);
+}
+/*  Responsividad CSS */
 @media only screen and (max-width: 1024px){
 .footer-col{
  width: 50% !important;
@@ -26,7 +31,7 @@
   padding: 12px !important;
 }
 }
-@media only screen and (max-width: 767px){
+@media only screen and (max-width: 768px){
 .footer-col{
   width: 100% !important;
 }
@@ -41,19 +46,27 @@
   font-size: 12px !important;
   padding: 10px !important;
 }
+.questions {
+  flex-direction: column !important;
 }
-/* Selector de Clases */
-.backg {
-  background-image: linear-gradient(gray, white); }
+.questions_box {
+  width: 100% !important;
+}
+}
+@media (max-width:420px) {
+  .wrapper .form .inputfield{
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .wrapper .form .inputfield label{
+    margin-bottom: 5px;
+  }
+  .wrapper .form .inputfield.terms{
+    flex-direction: row;
+  }
+}
 
-.cuerpo {
-  background-image: linear-gradient(gray, white); }
 
-.pic {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%; }
 
 .pagename {
   font-size: 65px;
@@ -71,24 +84,21 @@
   padding: 200px;
   margin: 0; }
 
-.titulos {
-  font-size: 40px;
-  font-weight: bold;
-  letter-spacing: 10px;
-  text-align: center;
-  text-shadow: black 6px 6px 8px;
-  text-transform: uppercase; }
-
-.titulos2 {
-  background-repeat: no-repeat;
-  background-position: center;
-  color: #ffffff;
-  font-size: 40px;
-  font-weight: bold;
-  letter-spacing: 10px;
-  text-align: center;
-  text-shadow: black 6px 6px 8px;
-  text-transform: uppercase; }
+  .pagesubname {
+    font-size: 44px;
+    font-weight: 900;
+    letter-spacing: 20px;
+    text-align: center;
+    color: white;
+    text-shadow: #dc3545 0 0 5px, #084298 0 0 5px;
+    text-transform: uppercase;
+    background-image: url(../imagenes/back.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    padding: 100px;
+    margin: 0; }
 
 h3 {
   color: #333333;
@@ -107,39 +117,36 @@ h2 {
   font-weight: 1000;
   line-height: 54px;
   padding: 15px 0 15px 0; }
+
+/* Preguntas */
 .questions {
-  background-image: linear-gradient(gray, white);
+  width: 100%;
+  padding: 30px;
   display: flex;
-  justify-content: flex-start;
-  flex-wrap: wrap; }
+  margin: 0;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;}
 
 .questions_box {
-  background-color: lightpink;
-  border-radius: 10px;
-  margin: 10px 0px 10px 10px;
-  width: 50%; }
+    background-color: #fff;
+    border-radius: 10px;
+    margin-bottom: 15px;
+    width: 80%;
+    padding: 7px 0 10px 20px; }
 
 .questions_box_title {
-  color: #125688; }
+  color: #000;
+  font-family: 'Open Sans', sans-serif; }
 
 .questions_box_content {
   color: #333;
   font-family: 'Verdana', sans-serif;
   font-size: 16px;
-  letter-spacing: normal;
   line-height: 150%;
-  text-indent: 30px;
-  margin: 0; }
+  margin-right: 5px; }
 
-.form {
-  margin-left: 40px; 
-}
-.tablas {
-  background-color: green; 
-}
-.fondos {
-  background-image: url(/imagenes/back.jpg); 
-}
 .imgprod {
   margin: 0px 10px 0px 10px;
   border-radius: 10px;
@@ -153,7 +160,6 @@ h2 {
 /* Acá empieza la flex box */
 .flex {
   display: flex;
-  background-image: linear-gradient(gray, white);
   width: 100%;
   flex-direction: column;
   align-items: center; }
@@ -252,8 +258,7 @@ h2 {
     border: 1px solid black;
     background-image: none;
   }
-  .carousel-control-next-icon:after
-  {
+  .carousel-control-next-icon:after  {
     content: '>';
     font-size: 55px;
     color: red;
@@ -263,9 +268,6 @@ h2 {
     font-size: 55px;
     color: red;
   }
-
- 
- }
 /* Galeria de productos */
 .box-container{
    display: flex;
@@ -349,6 +351,7 @@ h2 {
  .box:hover .overlay a{
    transform: translateY(0px);
  }
+ /* Footer */
 .footer{
    background-color: #24262b;
    padding-top: 20px;
@@ -419,8 +422,123 @@ h2 {
    color: #24262b;
    background-color: #ffffff;
   }
-  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
-body{
-	line-height: 1.5;
-	font-family: 'Poppins', sans-serif;
+/* Formulario */
+.wrapper{
+  max-width: 500px;
+  width: 100%;
+  background: #fff;
+  margin: 20px;
+  box-shadow: 1px 1px 2px rgba(0,0,0,0.125);
+  padding: 30px;
+}
+
+.wrapper .title{
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 25px;
+  color: black;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.wrapper .form{
+  width: 100%;
+}
+
+.wrapper .form .inputfield{
+  margin-bottom: 15px;
+  display: flex;
+  align-items: center;
+}
+
+.wrapper .form .inputfield label{
+   width: 200px;
+   color: #757575;
+   margin-right: 10px;
+  font-size: 14px;
+}
+
+.wrapper .form .inputfield .input,
+.wrapper .form .inputfield .textarea{
+  width: 100%;
+  outline: none;
+  border: 1px solid #d5dbd9;
+  font-size: 15px;
+  padding: 8px 10px;
+  border-radius: 3px;
+  transition: all 0.3s ease;
+}
+
+.wrapper .form .inputfield .textarea{
+  width: 100%;
+  height: 125px;
+  resize: none;
+}
+
+.wrapper .form .inputfield .input:focus,
+.wrapper .form .inputfield .textarea:focus {
+  border: 1px solid #fec107;
+}
+
+.wrapper .form .inputfield p{
+   font-size: 14px;
+   color: #757575;
+}
+
+.wrapper .form .inputfield .btn{
+  width: 100%;
+  padding: 8px 10px;
+  font-size: 15px; 
+  border: 0px;
+  background:  black;
+  color: #fff;
+  cursor: pointer;
+  border-radius: 3px;
+  outline: none;
+}
+
+.wrapper .form .inputfield .btn:hover{
+  background: gray;
+}
+
+.wrapper .form .inputfield:last-child{
+  margin-bottom: 0;
+}
+
+.container-content{
+  width: 1200px;
+  margin: auto;
+  margin-top: 40px;
+}
+article {
+  width: 100%;
+  padding: 20px;
+  padding-bottom: 40px;
+  box-shadow: -10px 0 20px -30px black;
+  position: relative;
+  border-radius: 6px;
+  overflow: hidden;
+}
+
+article:before{
+  content: '';
+  width: 100%;
+  height: 6px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+article h1 {
+  margin-top: 20px;
+  font-weight: 500;
+  font-size: 40px;
+}
+article p{
+  margin-top: 20px;
+  font-size: 18px;
+  color: #000;
+}
+article img{
+  width: 100%;
+  margin-top: 20px;
 }
