--- a/css/todovaporstore.css
+++ b/css/todovaporstore.css
@@ -54,7 +54,7 @@ body {
   article {
     max-width: 750px !important; } }
 
-@media (max-width: 425px) {
+@media only screen and (max-width: 425px) {
   .wrapper .form .inputfield {
     flex-direction: column;
     align-items: flex-start; }
@@ -74,8 +74,6 @@ body {
     padding: 0 !important;
     font-size: 18px !important;
     letter-spacing: 0px !important; }
-  article {
-    max-width: 300px !important; }
   article h1 {
     font-size: 25px !important; }
   article p {
