--- a/scss/style.scss
+++ b/scss/style.scss
@@ -67,11 +67,11 @@ article {
   max-width: 750px !important;
 }
 }
-@media (max-width:425px) {
+@media only screen and (max-width:425px) {
 .wrapper .form .inputfield{
   flex-direction: column;
   align-items: flex-start;
-  }
+}
 .wrapper .form .inputfield label{
   margin-bottom: 5px;
   }
@@ -92,9 +92,6 @@ article {
   padding: 0 !important;
   font-size: 18px !important;
   letter-spacing: 0px !important;
-}
-article {
-  max-width: 300px !important;
 }
 article h1{
   font-size: 25px !important;
